begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/*  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  *  with the License.  You may obtain a copy of the License at  *  *      http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing, software  *  distributed under the License is distributed on an "AS IS" BASIS,  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *  See the License for the specific language governing permissions and  *  limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.container.common.helpers
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|helpers
package|;
end_package

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|base
operator|.
name|Preconditions
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|commons
operator|.
name|io
operator|.
name|FileUtils
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|fs
operator|.
name|FileAlreadyExistsException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdfs
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|ContainerProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|OzoneConsts
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|impl
operator|.
name|ContainerManagerImpl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|utils
operator|.
name|LevelDBStore
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|Logger
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|LoggerFactory
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|File
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|nio
operator|.
name|file
operator|.
name|Path
import|;
end_import

begin_import
import|import
name|java
operator|.
name|nio
operator|.
name|file
operator|.
name|Paths
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|commons
operator|.
name|io
operator|.
name|FilenameUtils
operator|.
name|removeExtension
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|OzoneConsts
operator|.
name|CONTAINER_EXTENSION
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|OzoneConsts
operator|.
name|CONTAINER_META
import|;
end_import

begin_comment
comment|/**  * A set of helper functions to create proper responses.  */
end_comment

begin_class
DECL|class|ContainerUtils
specifier|public
specifier|final
class|class
name|ContainerUtils
block|{
comment|/**    * Returns a CreateContainer Response. This call is used by create and delete    * containers which have null success responses.    *    * @param msg Request    * @return Response.    */
specifier|public
specifier|static
name|ContainerProtos
operator|.
name|ContainerCommandResponseProto
DECL|method|getContainerResponse (ContainerProtos.ContainerCommandRequestProto msg)
name|getContainerResponse
parameter_list|(
name|ContainerProtos
operator|.
name|ContainerCommandRequestProto
name|msg
parameter_list|)
block|{
name|ContainerProtos
operator|.
name|ContainerCommandResponseProto
operator|.
name|Builder
name|builder
init|=
name|getContainerResponse
argument_list|(
name|msg
argument_list|,
name|ContainerProtos
operator|.
name|Result
operator|.
name|SUCCESS
argument_list|,
literal|""
argument_list|)
decl_stmt|;
return|return
name|builder
operator|.
name|build
argument_list|()
return|;
block|}
comment|/**    * Returns a ReadContainer Response.    *    * @param msg Request    * @return Response.    */
specifier|public
specifier|static
name|ContainerProtos
operator|.
name|ContainerCommandResponseProto
DECL|method|getReadContainerResponse (ContainerProtos.ContainerCommandRequestProto msg, ContainerData containerData)
name|getReadContainerResponse
parameter_list|(
name|ContainerProtos
operator|.
name|ContainerCommandRequestProto
name|msg
parameter_list|,
name|ContainerData
name|containerData
parameter_list|)
block|{
name|Preconditions
operator|.
name|checkNotNull
argument_list|(
name|containerData
argument_list|)
expr_stmt|;
name|ContainerProtos
operator|.
name|ReadContainerResponseProto
operator|.
name|Builder
name|response
init|=
name|ContainerProtos
operator|.
name|ReadContainerResponseProto
operator|.
name|newBuilder
argument_list|()
decl_stmt|;
name|response
operator|.
name|setContainerData
argument_list|(
name|containerData
operator|.
name|getProtoBufMessage
argument_list|()
argument_list|)
expr_stmt|;
name|ContainerProtos
operator|.
name|ContainerCommandResponseProto
operator|.
name|Builder
name|builder
init|=
name|getContainerResponse
argument_list|(
name|msg
argument_list|,
name|ContainerProtos
operator|.
name|Result
operator|.
name|SUCCESS
argument_list|,
literal|""
argument_list|)
decl_stmt|;
name|builder
operator|.
name|setReadContainer
argument_list|(
name|response
argument_list|)
expr_stmt|;
return|return
name|builder
operator|.
name|build
argument_list|()
return|;
block|}
comment|/**    * We found a command type but no associated payload for the command. Hence    * return malformed Command as response.    *    * @param msg - Protobuf message.    * @return ContainerCommandResponseProto - MALFORMED_REQUEST.    */
specifier|public
specifier|static
name|ContainerProtos
operator|.
name|ContainerCommandResponseProto
operator|.
name|Builder
DECL|method|getContainerResponse (ContainerProtos.ContainerCommandRequestProto msg, ContainerProtos.Result result, String message)
name|getContainerResponse
parameter_list|(
name|ContainerProtos
operator|.
name|ContainerCommandRequestProto
name|msg
parameter_list|,
name|ContainerProtos
operator|.
name|Result
name|result
parameter_list|,
name|String
name|message
parameter_list|)
block|{
return|return
name|ContainerProtos
operator|.
name|ContainerCommandResponseProto
operator|.
name|newBuilder
argument_list|()
operator|.
name|setCmdType
argument_list|(
name|msg
operator|.
name|getCmdType
argument_list|()
argument_list|)
operator|.
name|setTraceID
argument_list|(
name|msg
operator|.
name|getTraceID
argument_list|()
argument_list|)
operator|.
name|setResult
argument_list|(
name|result
argument_list|)
operator|.
name|setMessage
argument_list|(
name|message
argument_list|)
return|;
block|}
comment|/**    * We found a command type but no associated payload for the command. Hence    * return malformed Command as response.    *    * @param msg - Protobuf message.    * @return ContainerCommandResponseProto - MALFORMED_REQUEST.    */
specifier|public
specifier|static
name|ContainerProtos
operator|.
name|ContainerCommandResponseProto
DECL|method|malformedRequest (ContainerProtos.ContainerCommandRequestProto msg)
name|malformedRequest
parameter_list|(
name|ContainerProtos
operator|.
name|ContainerCommandRequestProto
name|msg
parameter_list|)
block|{
return|return
name|getContainerResponse
argument_list|(
name|msg
argument_list|,
name|ContainerProtos
operator|.
name|Result
operator|.
name|MALFORMED_REQUEST
argument_list|,
literal|"Cmd type does not match the payload."
argument_list|)
operator|.
name|build
argument_list|()
return|;
block|}
comment|/**    * We found a command type that is not supported yet.    *    * @param msg - Protobuf message.    * @return ContainerCommandResponseProto - MALFORMED_REQUEST.    */
specifier|public
specifier|static
name|ContainerProtos
operator|.
name|ContainerCommandResponseProto
DECL|method|unsupportedRequest (ContainerProtos.ContainerCommandRequestProto msg)
name|unsupportedRequest
parameter_list|(
name|ContainerProtos
operator|.
name|ContainerCommandRequestProto
name|msg
parameter_list|)
block|{
return|return
name|getContainerResponse
argument_list|(
name|msg
argument_list|,
name|ContainerProtos
operator|.
name|Result
operator|.
name|UNSUPPORTED_REQUEST
argument_list|,
literal|"Server does not support this command yet."
argument_list|)
operator|.
name|build
argument_list|()
return|;
block|}
comment|/**    * get containerName from a container file.    *    * @param containerFile - File    * @return Name of the container.    */
DECL|method|getContainerNameFromFile (File containerFile)
specifier|public
specifier|static
name|String
name|getContainerNameFromFile
parameter_list|(
name|File
name|containerFile
parameter_list|)
block|{
name|Preconditions
operator|.
name|checkNotNull
argument_list|(
name|containerFile
argument_list|)
expr_stmt|;
return|return
name|Paths
operator|.
name|get
argument_list|(
name|containerFile
operator|.
name|getParent
argument_list|()
argument_list|)
operator|.
name|resolve
argument_list|(
name|removeExtension
argument_list|(
name|containerFile
operator|.
name|getName
argument_list|()
argument_list|)
argument_list|)
operator|.
name|toString
argument_list|()
return|;
block|}
comment|/**    * Verifies that this in indeed a new container.    *    * @param containerFile - Container File to verify    * @param metadataFile  - metadata File to verify    * @throws IOException    */
DECL|method|verifyIsNewContainer (File containerFile, File metadataFile)
specifier|public
specifier|static
name|void
name|verifyIsNewContainer
parameter_list|(
name|File
name|containerFile
parameter_list|,
name|File
name|metadataFile
parameter_list|)
throws|throws
name|IOException
block|{
name|Logger
name|log
init|=
name|LoggerFactory
operator|.
name|getLogger
argument_list|(
name|ContainerManagerImpl
operator|.
name|class
argument_list|)
decl_stmt|;
if|if
condition|(
name|containerFile
operator|.
name|exists
argument_list|()
condition|)
block|{
name|log
operator|.
name|error
argument_list|(
literal|"container already exists on disk. File: {}"
argument_list|,
name|containerFile
operator|.
name|toPath
argument_list|()
argument_list|)
expr_stmt|;
throw|throw
operator|new
name|FileAlreadyExistsException
argument_list|(
literal|"container already exists on "
operator|+
literal|"disk."
argument_list|)
throw|;
block|}
if|if
condition|(
name|metadataFile
operator|.
name|exists
argument_list|()
condition|)
block|{
name|log
operator|.
name|error
argument_list|(
literal|"metadata found on disk, but missing container. Refusing to"
operator|+
literal|" write this container. File: {} "
argument_list|,
name|metadataFile
operator|.
name|toPath
argument_list|()
argument_list|)
expr_stmt|;
throw|throw
operator|new
name|FileAlreadyExistsException
argument_list|(
operator|(
literal|"metadata found on disk, but "
operator|+
literal|"missing container. Refusing to write this container."
operator|)
argument_list|)
throw|;
block|}
name|File
name|parentPath
init|=
operator|new
name|File
argument_list|(
name|containerFile
operator|.
name|getParent
argument_list|()
argument_list|)
decl_stmt|;
if|if
condition|(
operator|!
name|parentPath
operator|.
name|exists
argument_list|()
operator|&&
operator|!
name|parentPath
operator|.
name|mkdirs
argument_list|()
condition|)
block|{
name|log
operator|.
name|error
argument_list|(
literal|"Unable to create parent path. Path: {}"
argument_list|,
name|parentPath
operator|.
name|toString
argument_list|()
argument_list|)
expr_stmt|;
throw|throw
operator|new
name|IOException
argument_list|(
literal|"Unable to create container directory."
argument_list|)
throw|;
block|}
if|if
condition|(
operator|!
name|containerFile
operator|.
name|createNewFile
argument_list|()
condition|)
block|{
name|log
operator|.
name|error
argument_list|(
literal|"creation of a new container file failed. File: {}"
argument_list|,
name|containerFile
operator|.
name|toPath
argument_list|()
argument_list|)
expr_stmt|;
throw|throw
operator|new
name|IOException
argument_list|(
literal|"creation of a new container file failed."
argument_list|)
throw|;
block|}
if|if
condition|(
operator|!
name|metadataFile
operator|.
name|createNewFile
argument_list|()
condition|)
block|{
name|log
operator|.
name|error
argument_list|(
literal|"creation of the metadata file failed. File: {}"
argument_list|,
name|metadataFile
operator|.
name|toPath
argument_list|()
argument_list|)
expr_stmt|;
throw|throw
operator|new
name|IOException
argument_list|(
literal|"creation of a new container file failed."
argument_list|)
throw|;
block|}
block|}
comment|/**    * creates a Metadata DB for the specified container.    *    * @param containerPath - Container Path.    * @throws IOException    */
DECL|method|createMetadata (Path containerPath)
specifier|public
specifier|static
name|Path
name|createMetadata
parameter_list|(
name|Path
name|containerPath
parameter_list|)
throws|throws
name|IOException
block|{
name|Preconditions
operator|.
name|checkNotNull
argument_list|(
name|containerPath
argument_list|)
expr_stmt|;
name|containerPath
operator|=
name|containerPath
operator|.
name|resolve
argument_list|(
name|OzoneConsts
operator|.
name|CONTAINER_META_PATH
argument_list|)
expr_stmt|;
if|if
condition|(
operator|!
name|containerPath
operator|.
name|toFile
argument_list|()
operator|.
name|mkdirs
argument_list|()
condition|)
block|{
throw|throw
operator|new
name|IOException
argument_list|(
literal|"Unable to create directory for metadata storage."
operator|+
literal|" Path {}"
operator|+
name|containerPath
argument_list|)
throw|;
block|}
name|containerPath
operator|=
name|containerPath
operator|.
name|resolve
argument_list|(
name|OzoneConsts
operator|.
name|CONTAINER_DB
argument_list|)
expr_stmt|;
name|LevelDBStore
name|store
init|=
operator|new
name|LevelDBStore
argument_list|(
name|containerPath
operator|.
name|toFile
argument_list|()
argument_list|,
literal|true
argument_list|)
decl_stmt|;
comment|// we close since the SCM pre-creates containers.
comment|// we will open and put Db handle into a cache when keys are being created
comment|// in a container.
name|store
operator|.
name|close
argument_list|()
expr_stmt|;
return|return
name|containerPath
return|;
block|}
comment|/**    * remove Container if it is empty.    *<p/>    * There are three things we need to delete.    *<p/>    * 1. Container file and metadata file. 2. The Level DB file 3. The path that    * we created on the data location.    *    * @param containerData - Data of the container to remove.    * @throws IOException    */
DECL|method|removeContainer (ContainerData containerData)
specifier|public
specifier|static
name|void
name|removeContainer
parameter_list|(
name|ContainerData
name|containerData
parameter_list|)
throws|throws
name|IOException
block|{
name|Preconditions
operator|.
name|checkNotNull
argument_list|(
name|containerData
argument_list|)
expr_stmt|;
comment|// TODO : Check if there are any keys. This needs to be done
comment|// by calling into key layer code, hence this is a TODO for now.
name|Path
name|dbPath
init|=
name|Paths
operator|.
name|get
argument_list|(
name|containerData
operator|.
name|getDBPath
argument_list|()
argument_list|)
decl_stmt|;
comment|// Delete the DB File.
name|FileUtils
operator|.
name|forceDelete
argument_list|(
name|dbPath
operator|.
name|toFile
argument_list|()
argument_list|)
expr_stmt|;
name|dbPath
operator|=
name|dbPath
operator|.
name|getParent
argument_list|()
expr_stmt|;
comment|// Delete all Metadata in the Data directories for this containers.
if|if
condition|(
name|dbPath
operator|!=
literal|null
condition|)
block|{
name|FileUtils
operator|.
name|deleteDirectory
argument_list|(
name|dbPath
operator|.
name|toFile
argument_list|()
argument_list|)
expr_stmt|;
name|dbPath
operator|=
name|dbPath
operator|.
name|getParent
argument_list|()
expr_stmt|;
block|}
comment|// now delete the container directory, this means that all key data dirs
comment|// will be removed too.
if|if
condition|(
name|dbPath
operator|!=
literal|null
condition|)
block|{
name|FileUtils
operator|.
name|deleteDirectory
argument_list|(
name|dbPath
operator|.
name|toFile
argument_list|()
argument_list|)
expr_stmt|;
block|}
comment|// Delete the container metadata from the metadata locations.
name|String
name|rootPath
init|=
name|getContainerNameFromFile
argument_list|(
operator|new
name|File
argument_list|(
name|containerData
operator|.
name|getContainerPath
argument_list|()
argument_list|)
argument_list|)
decl_stmt|;
name|Path
name|containerPath
init|=
name|Paths
operator|.
name|get
argument_list|(
name|rootPath
operator|.
name|concat
argument_list|(
name|CONTAINER_EXTENSION
argument_list|)
argument_list|)
decl_stmt|;
name|Path
name|metaPath
init|=
name|Paths
operator|.
name|get
argument_list|(
name|rootPath
operator|.
name|concat
argument_list|(
name|CONTAINER_META
argument_list|)
argument_list|)
decl_stmt|;
name|FileUtils
operator|.
name|forceDelete
argument_list|(
name|containerPath
operator|.
name|toFile
argument_list|()
argument_list|)
expr_stmt|;
name|FileUtils
operator|.
name|forceDelete
argument_list|(
name|metaPath
operator|.
name|toFile
argument_list|()
argument_list|)
expr_stmt|;
block|}
DECL|method|ContainerUtils ()
specifier|private
name|ContainerUtils
parameter_list|()
block|{
comment|//never constructed.
block|}
block|}
end_class

end_unit

